--- a/app/gem-farm/public/index.html
+++ b/app/gem-farm/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <title>Gem Farm</title>
+    <title>Coinfra - Staking</title>
   </head>
   <body>
     <noscript>
